--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -1,3 +1,6 @@
+$small: 360px;
+$medium: 760px;
+
 .phone{
      background-color: "#DACCBA";
      color: "#4D4949";
@@ -24,7 +27,20 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
-    height: 30vh;
+    height: 35vh; 
+    @media only screen and (min-width: $small) and (max-width: $medium){
+        .mobile{
+            // font-weight: 900;
+            color: wheat;
+        }
+        background-image: url('/CPanelBarnCroppedShort.jpg');
+        background-size: contain;
+        height: 30vh !important;
+        .moveup{
+                position: relative;
+                top: -10px !important;
+               }
+    }
 }
 
 .links{
@@ -32,4 +48,20 @@
     margin: 2px;
     padding: 2px;
     color: rgb(103, 19, 0)
+}
+
+.moveup{
+    position: relative;
+    top: -10px !important;
+}
+
+@media only screen and (min-width: $small) and (max-width: $medium){
+    .centerMobile{
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      margin-left: 0% !important;
+      padding-left: 0% !important;
+      position: relative;
+    }
 }
