--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -67,3 +67,12 @@ $medium: 760px;
      margin-left: 10% !important;
     }
 }
+
+.kal{
+  font-family: "Kalnia Glaze", serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
