--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -1,6 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Rye&display=swap');
+
 $small: 360px;
 $medium: 760px;
 
+.rye-regular {
+    font-family: "Rye", serif;
+    font-weight: 500;
+    font-style: normal;
+  }
+  
 .phone{
      background-color: "#DACCBA";
      color: "#4D4949";
