--- a/src/pages/styles/index.scss
+++ b/src/pages/styles/index.scss
@@ -33,3 +33,11 @@ a{
     display: flex;
     height: 20px;
 }
+
+.shade{
+    background-image: url('/Horse-Shade-Maricopa-County-AZ-logo_inPixio.png');
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+    
