--- a/src/pages/about/styles.css
+++ b/src/pages/about/styles.css
@@ -1,9 +1,10 @@
 /* styles/About.module.css */
 
 .container {
-    padding: 2rem;
-    max-width: 800px;
-    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
   }
   
   h1 {
@@ -16,4 +17,3 @@
     line-height: 1.6;
     margin-bottom: 1.5rem;
   }
-  
